# cmnemoi-learn

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: continous_delivery.yaml  continous_integration.yaml  create_github_release.yaml  publish_to_pypi.yaml
cmnemoi_learn/: __init__.py  _abstract_model.py  abstract_model.py  linear_regression.py  metrics.py
cmnemoi_learn/classification/: __init__.py  _abstract_classifier.py  _knn_classifier.py  _logistic_regression.py  abstract_classifier.py  logistic_regression.py
cmnemoi_learn/regression/: __init__.py  _abstract_regressor.py  _linear_regression.py  abstract_regressor.py  linear_regression.py
notebooks/: notebook.ipynb
tests/: conftest.py  test_linear_regression.py
tests/classification/: test_knn_classifier.py  test_logistic_regression.py
tests/metrics/: test_metrics.py
tests/regression/: test_linear_regression.py
