[tool.poetry]
name = "cmnemoi-learn"
version = "0.1.0"
description = "Machine Learning from scratch by Charles-Meldhine Madi Mnemoi"
authors = ["Charles-Meldhine Madi Mnemoi <charlesmeldhine.madimnemoi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cmnemoi_learn"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"
jupyter = "^1.0.0"
black = "^23.7.0"
pylint = "^2.17.5"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
