[tool.poetry]
name = "cmnemoi-learn"
version = "0.3.0"
description = "Machine Learning from scratch by Charles-Meldhine Madi Mnemoi"
authors = ["Charles-Meldhine Madi Mnemoi <charlesmeldhine.madimnemoi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmnemoi/cmnemoi-learn.git"
packages = [{include = "cmnemoi_learn"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.7.0"
pylint = "^2.17.5"
mypy = "^1.4.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
